--- a/ExplorerAdv/ExplorerAdv.csproj
+++ b/ExplorerAdv/ExplorerAdv.csproj
@@ -1,18 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Commons\Commons.csproj" />
-    <ProjectReference Include="..\ExplorerViewModel\ExplorerViewModel.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Resources\Images\" />
+    <ProjectReference Include="..\Explorer\Explorer.csproj" />
   </ItemGroup>
 
 </Project>
